# linkedin_automation

./: pyproject.toml
app/: main.py
